update to latest xunit

--- a/Rx.NET/Source/Microsoft.Reactive.Testing/Microsoft.Reactive.Testing.csproj
+++ b/Rx.NET/Source/Microsoft.Reactive.Testing/Microsoft.Reactive.Testing.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard1.3</TargetFrameworks>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
@@ -39,7 +39,7 @@
     </PackageReference>
     <!-- https://github.com/NuGet/Home/issues/4143 
      <PackageReference Include="xunit.assert.source" Version="2.2.0-beta4-build3444" /> -->
-    <PackageReference Include="xunit.assert" Version="2.2.0-beta4-build3444" />
+    <PackageReference Include="xunit.assert" Version="2.2.0-beta4-build3465" />
     <ProjectReference Include="..\System.Reactive\System.Reactive.csproj" />
   </ItemGroup>
 </Project>
