--- a/Rx.NET/Source/Directory.build.targets
+++ b/Rx.NET/Source/Directory.build.targets
@@ -1,7 +1,7 @@
 <Project>  
   <!-- This has to be set in targets as the default props will overwrite -->
   <PropertyGroup>
-    <DebugType>embedded</DebugType>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
   
   <!-- This props all need to be set in targets as they depend on the values set earlier -->
