disable gv for test

--- a/Rx.NET/Source/tests/Directory.build.targets
+++ b/Rx.NET/Source/tests/Directory.build.targets
@@ -1,3 +1,6 @@
 <Project>  
   <Import Project="..\Directory.build.targets" />
+  <PropertyGroup>
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
 </Project>
