--- a/Rx.NET/Source/Directory.build.props
+++ b/Rx.NET/Source/Directory.build.props
@@ -21,10 +21,10 @@
   </PropertyGroup>
   
     <ItemGroup>
-    <PackageReference Include="GitVersionTask" Version="4.0.0-beta0011" PrivateAssets="All" />
+    <!--<PackageReference Include="GitVersionTask" Version="4.0.0-beta0011" PrivateAssets="All" /> -->
     <PackageReference Include="MSBuild.Sdk.Extras" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="SourceLink.Create.GitHub" Version="2.1.0-b412" PrivateAssets="All" /> 
-    <DotNetCliToolReference Include="dotnet-sourcelink-git" Version="2.1.0-b412" /> 
+    <PackageReference Include="SourceLink.Create.GitHub" Version="2.0.2" PrivateAssets="All" /> 
+    <DotNetCliToolReference Include="dotnet-sourcelink-git" Version="2.0.2" /> 
   </ItemGroup>
   
   
