debug type on net46 tests to full

--- a/Rx.NET/Source/tests/Directory.build.targets
+++ b/Rx.NET/Source/tests/Directory.build.targets
@@ -1,6 +1,7 @@
 <Project>  
   <Import Project="..\Directory.build.targets" />
   <PropertyGroup>
-    <DebugType>portable</DebugType>
+    <DebugType Condition="'$(TargetFramework)' != 'net46'">portable</DebugType>
+    <DebugType Condition="'$(TargetFramework)' == 'net46'">full</DebugType>
   </PropertyGroup>
 </Project>
