--- a/Rx.NET/Source/Directory.build.props
+++ b/Rx.NET/Source/Directory.build.props
@@ -24,7 +24,7 @@
     <!--<PackageReference Include="GitVersionTask" Version="4.0.0-beta0011" PrivateAssets="All" />-->
     <PackageReference Include="MSBuild.Sdk.Extras" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="SourceLink.Create.GitHub" Version="2.0.2" PrivateAssets="All" /> 
-    <DotNetCliToolReference Include="dotnet-sourcelink-git" Version="2.0.2" />
+    <DotNetCliToolReference Include="dotnet-sourcelink-git" Version="2.0.2-b419" />
     <DotNetCliToolReference Include="dotnet-sourcelink" Version="2.0.2" /> 
   </ItemGroup>
   
