--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,8 @@
 image: Visual Studio 2015
 
+init:
+  - git config --global core.autocrlf input
+
 environment:
   COVERALLS_REPO_TOKEN:
     secure: DOSlU041NY0WKjv9njrNqj14CLEzrF4ogZsbvqIXnNLd492oNlQf4dD5yr7TSK/S
