--- a/Rx.NET/Source/Directory.build.props
+++ b/Rx.NET/Source/Directory.build.props
@@ -26,7 +26,7 @@
     <PackageReference Include="MSBuild.Sdk.Extras" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
-  <PropertyGroup Condition="'$(IsTestProject)' != 'true'">
+  <ItemGroup Condition="'$(IsTestProject)' != 'true'">
     <PackageReference Include="SourceLink.Create.GitHub" Version="2.0.3" PrivateAssets="All" /> 
     <DotNetCliToolReference Include="dotnet-sourcelink-git" Version="2.0.3" />
   </ItemGroup>
