--- a/Rx.NET/Source/facades/Directory.build.props
+++ b/Rx.NET/Source/facades/Directory.build.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+    <Description>Reactive Extensions (Rx) for .NET - v3 compatibility facade for $(AssemblyName)</Description>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\GlobalAssemblyVersion.cs" Link="GlobalAssemblyVersion.cs" />
