workaround for hard-fail in 15.1

--- a/Rx.NET/Source/Directory.build.props
+++ b/Rx.NET/Source/Directory.build.props
@@ -32,4 +32,7 @@
     <DotNetCliToolReference Include="dotnet-sourcelink-git" Version="2.0.2" />
   </ItemGroup>
   
+  <!-- Workaround -->
+  <Target Name="GetPackagingOutputs" />
+  
 </Project>
