--- a/Rx.NET/Source/Directory.build.props
+++ b/Rx.NET/Source/Directory.build.props
@@ -28,7 +28,7 @@
     <PackageReference Include="MSBuild.Sdk.Extras" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
   
-  <ItemGroup Condition="'$(IsTestProject)' != 'true' and $(SourceLinkEnabled)' != 'false'">
+  <ItemGroup Condition="'$(IsTestProject)' != 'true' and '$(SourceLinkEnabled)' != 'false'">
     <PackageReference Include="SourceLink.Create.GitHub" Version="2.1.0" PrivateAssets="All" /> 
     <DotNetCliToolReference Include="dotnet-sourcelink-git" Version="2.1.0" />
   </ItemGroup>
