--- a/Ix.NET/Source/NuGet.Config
+++ b/Ix.NET/Source/NuGet.Config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <add key="xUnit CI" value="https://www.myget.org/F/xunit/api/v3/index.json" />
+    <add key="NBGV CI" value="https://ci.appveyor.com/nuget/nerdbank-gitversioning" />
     <add key="Build Packages" value="https://www.myget.org/F/c037199d-41df-4567-b966-25ff65324688/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
