--- a/Rx.NET/Source/facades/Directory.build.props
+++ b/Rx.NET/Source/facades/Directory.build.props
@@ -2,6 +2,7 @@
   <Import Project="..\Directory.build.props" />
   <PropertyGroup>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyVersionInfo>false</GenerateAssemblyVersionInfo>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     <Description>Reactive Extensions (Rx) for .NET - v3 compatibility facade for $(AssemblyName)</Description>
   </PropertyGroup>
